objects/APTS_Master_Data_Cube__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Field__c</fullName>
        <label>Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Values__c</fullName>
        <label>Values</label>
        <type>TextArea</type>
    </fields>
    <label>Master Data Cube</label>
</CustomObject>